in smart-grid path

--- a/assets/src/css/body.less
+++ b/assets/src/css/body.less
@@ -1,4 +1,8 @@
+
+
+
 .first-title{
+  height: 700px;
   .title-text{
      .first-line{
       .basic-font();
@@ -16,3 +20,25 @@
       }
 
     }
+.we-are-fishfish{
+  .row-flex();
+  height: 614px;
+  background-color: @blue-color;
+  .left-place{
+      .left-text-spacing();
+    .col();
+    width: 40%;
+      p.who-text{
+        .basic-font();
+        .middle-text();
+
+        color:@white-color;
+      }
+   }
+   .rigth-place{
+
+     .col();
+     .right-text-spacing();
+     width: 50%;
+   }
+}
