--- a/assets/src/css/styles.less
+++ b/assets/src/css/styles.less
@@ -10,7 +10,6 @@
 // .degubGrid{
 //     .debug(rgba(0, 0, 0, 0.4), 1px solid #ff0);
 // }
-// fonts
 .basic-font(){
 @font-face { font-family: Manrope; src: url('fonts/manrope-regular.ttf'); }
 font-family: Manrope;
@@ -24,6 +23,20 @@ font-size: 72px;
 line-height: 92.5%;
 text-transform: uppercase;
 }
+.middle-text(){
+  font-weight: 600;
+  font-size: 64px;
+  line-height: 100%;
+  letter-spacing: -0.015em;
+}
+.left-text-spacing(){
+  padding-top: 80px;
+}
+.right-text-spacing(){
+  .left-text-spacing()
+}
 @yellow-color: #F6B155;
 @purple-color: #32395F;
 @pinky-color: #E99996;
+@blue-color: #32395F;
+@white-color: #F4ECE1;
