--- a/assets/src/css/styles.less
+++ b/assets/src/css/styles.less
@@ -14,6 +14,7 @@
 @font-face { font-family: Manrope; src: url('fonts/manrope-regular.ttf'); }
 font-family: Manrope;
 font-style: normal;
+  letter-spacing: -0.015em;
 }
 .important-words(@color,@weight:600){
 .basic-font();
@@ -27,16 +28,37 @@ text-transform: uppercase;
   font-weight: 600;
   font-size: 64px;
   line-height: 100%;
-  letter-spacing: -0.015em;
+
 }
+.middle-tiny-text(){
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 130%;
+}
+.tiny-text(){
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 130%;
+}
+.left-place(){
+  .left-text-spacing();
+  .col();
+  width: 40%;
+}
+.right-place(){
+  .col();
+  width: 50%;
+}
+
 .left-text-spacing(){
   padding-top: 80px;
 }
 .right-text-spacing(){
-  .left-text-spacing()
+  .left-text-spacing();
 }
+
 @yellow-color: #F6B155;
 @purple-color: #32395F;
-@pinky-color: #E99996;
+@pink-color: #E99996;
 @blue-color: #32395F;
 @white-color: #F4ECE1;
