--- a/assets/src/css/header.less
+++ b/assets/src/css/header.less
@@ -1,7 +1,4 @@
 
-.degubGrid{
-    .debug(rgba(0, 0, 0, 0.4), 1px solid #ff0);
-}
 .header-place{
   .row-flex();
   margin-bottom: 116px;
@@ -11,10 +8,12 @@
   }
     p.logo-title{
       .important-words(@yellow-color);
+      .size-md(3);
     }
     .menu-burger-place{
       .col();
       width: 4%;
+      .size-md(3);
       a{
       .important-words(@purple-color,100);
       text-decoration: none;
