--- a/assets/src/css/styles.less
+++ b/assets/src/css/styles.less
@@ -10,11 +10,11 @@
 // .degubGrid{
 //     .debug(rgba(0, 0, 0, 0.4), 1px solid #ff0);
 // }
-// fonts
 .basic-font(){
 @font-face { font-family: Manrope; src: url('fonts/manrope-regular.ttf'); }
 font-family: Manrope;
 font-style: normal;
+  letter-spacing: -0.015em;
 }
 .important-words(@color,@weight:600){
 .basic-font();
@@ -24,6 +24,41 @@ font-size: 72px;
 line-height: 92.5%;
 text-transform: uppercase;
 }
+.middle-text(){
+  font-weight: 600;
+  font-size: 64px;
+  line-height: 100%;
+
+}
+.middle-tiny-text(){
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 130%;
+}
+.tiny-text(){
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 130%;
+}
+.left-place(){
+  .left-text-spacing();
+  .col();
+  width: 40%;
+}
+.right-place(){
+  .col();
+  width: 50%;
+}
+
+.left-text-spacing(){
+  padding-top: 80px;
+}
+.right-text-spacing(){
+  .left-text-spacing();
+}
+
 @yellow-color: #F6B155;
 @purple-color: #32395F;
-@pinky-color: #E99996;
+@pink-color: #E99996;
+@blue-color: #32395F;
+@white-color: #F4ECE1;
