--- a/assets/src/css/styles.less
+++ b/assets/src/css/styles.less
@@ -41,20 +41,41 @@ text-transform: uppercase;
   line-height: 130%;
 }
 .left-place(){
-  .left-text-spacing();
-  .col();
-  width: 40%;
-}
-.right-place(){
   .col();
   width: 50%;
 }
+.right-place(){
+  .col();
+  width: 40%;
+}
+.half-display-left-place{
+
+}
 
 .left-text-spacing(){
-  padding-top: 80px;
+  // padding-top: 80px;
 }
 .right-text-spacing(){
   .left-text-spacing();
+}
+.full-screen(){
+  margin-right: -165px;
+  margin-left: -165px;
+}
+.full-screen-left(){
+  margin-right: -165px;
+}
+.full-screen-right(){
+  margin-left: -165px;
+}
+
+.inside-left-side{
+  padding-top: 80px;
+  padding-left: 0px;
+}
+.inside-right-side{
+  padding-top: 80px;
+  margin-left: 10px;
 }
 
 @yellow-color: #F6B155;
@@ -62,3 +83,4 @@ text-transform: uppercase;
 @pink-color: #E99996;
 @blue-color: #32395F;
 @white-color: #F4ECE1;
+@green-color: #2E796D;
