--- a/assets/src/css/styles.less
+++ b/assets/src/css/styles.less
@@ -1,5 +1,6 @@
 @import "header.less";
 @import "body.less";
+@import "footer.less";
 @import "smart-grid.less";
 // @import "smart-grid.less";
 .reset();
@@ -42,11 +43,9 @@ text-transform: uppercase;
 }
 .left-place(){
   .col();
-  width: 50%;
 }
 .right-place(){
   .col();
-  width: 40%;
 }
 .half-display-left-place{
 
