--- a/assets/src/css/styles.less
+++ b/assets/src/css/styles.less
@@ -76,6 +76,9 @@ text-transform: uppercase;
   padding-top: 80px;
   margin-left: 10px;
 }
+.button{
+
+}
 
 @yellow-color: #F6B155;
 @purple-color: #32395F;
